syntax = "proto3";

package demo;

// This service implements a simple guestbook
service itIsDemoTimeYodelay {
    // first hello world test
    rpc YodelayWorld (Yodelay) returns (IiiOoo) {
    }

    // second calls a function that reponsed
    rpc toLowerCase (UpperCaseRequest) returns (LowerCaseResponse) {
    }

    // List existing posts
    rpc gRPCPermutations (PermutationRequest) returns (PermutationResponse) {
    }

    //Server streaming API
    rpc GreetManyTimes (GreetManyTimesRequest) returns ( stream GreetManyTimesResponse) {};
}

// ! first test for the hello world demo:
message Yodelay {
    string whenI = 1;
}

message IiiOoo {
    string message = 1;
}


// ! second test for unique array:
message UpperCaseRequest {
  string uppercase = 1;
}

message LowerCaseResponse {
  string message = 1;
}


// third test:
message PermutationRequest {
    int32 n = 1;
    
}

message PermutationResponse {
    string message = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
     string result = 1;
}

message Greeting {
    string first_name = 1;
    string last_name = 2;
}
