syntax = "proto3";

// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";
// option objc_class_prefix = "HLW";

package helloaworld;

// The greeting service definition.
service YodelayAPI {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequestAGAIN) returns (stream HelloReplyAGAIN) {}
  // rpc SayHelloAgainAgain (HelloRequest) returns (HelloReply) {}
}

// The SECOND greeting service definition.
service servTWO {
  // Sends a greeting
  rpc SayHelloTWO (stream HelloRequestTWO) returns (HelloReplyTWO) {}
  rpc SayHelloAgainTWO (stream HelloRequestTWOagain) returns (stream HelloReplyTWOagain) {}
  // rpc SayHelloAgainAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string port = 1;
  string packageName = 2;
  string service = 3;
  string message = 4;
  string protoObject = 5;
  int32 integer = 6;

}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int32 integer = 2;
  
}

// The AGAIN request message containing the user's name.
message HelloRequestAGAIN {
  string portAGAIN = 1;
  bytes bytes = 2;
  int64 int64 = 3;
  float float = 4;
  bool bool = 5;
  int32 integerAGAIN = 6;

}

// The AGAIN response message containing the greetings
message HelloReplyAGAIN {
  string messageAGAIN = 1;
  int32 integerAGAIN = 2;
  
}


// The SECOND request message containing the user's name.
message HelloRequestTWO {
  string portTWO = 1;
  double double = 2;
  uint32 uint32 = 3;
  uint64 uint64 = 4;
  sint32 sint32 = 5;
  sint64 sint64 = 6;

}

// The SECOND response message containing the greetings
message HelloReplyTWO {
  string messageTWO = 1;
  int32 integerTWO = 2;

}

// The SECOND AGAIN request message containing the user's name.
message HelloRequestTWOagain {
  fixed32 fixed32 = 1;
  fixed64 fixed64 = 2;
  sfixed32 sfixed32 = 3;
  sfixed64 sfixed64 = 4;
  string protoObjectTWOagain = 5;
  int32 integerTWOagain = 6;

}

// The SECOND AGAIN response message containing the greetings
message HelloReplyTWOagain {
  string messageTWOagain = 1;
  int32 integerTWOagain = 2;

}



